feat: add coming soon modal and expand subscriber model with name & email
